# load-tester

./: Cargo.toml  README.md
src/: cli.rs  main.rs  metrics.rs  request.rs
src/models/: mod.rs  response.rs  response_type.rs
src/utils/: cli.rs  colors.rs  mod.rs
