[package]
name = "load-tester"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
cli-table = "0.4.6"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
textplots = "0.8.0"
rgb = "0.8.27"
serde_json = "1.0.67"